Height Fixes and Hidden Footer on mobile devices

--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -1,7 +1,7 @@
 @use "../assets/scss/variables" as vars;
 
 .layoutContainer {
-  height: 100%;
+  height: 75vh;
   position: relative;
   margin: 0 1.25rem;
   margin-top: -0.1rem;
@@ -40,11 +40,11 @@
   flex: 1; // Add this to take available space
   min-height: 0; // Important for flex children with scroll
 
-  div p span{
-  font-weight: 500;
-  color: vars.$color;
-  opacity: 0.9;
-}
+  div p span {
+    font-weight: 500;
+    color: vars.$color;
+    opacity: 0.9;
+  }
 }
 
 .welcomeSection {
@@ -163,6 +163,7 @@
 
 @media (max-width: 1279px) {
   .layoutContainer {
+    height: 100%;
     margin: 0 0.75rem;
   }
 
@@ -194,7 +195,7 @@
   }
 }
 
-@media (max-width: 1024) {
+@media (max-width: 1024px) {
   .layoutContainer {
     margin: 0;
   }
