--- a/app/works/works.module.scss
+++ b/app/works/works.module.scss
@@ -1,7 +1,7 @@
 @use "../assets/scss/variables" as vars;
 
 .layoutContainer {
-  height: 100%;
+  height: 75vh;
   position: relative;
   margin: 0 1.25rem;
   margin-top: -0.1rem;
@@ -55,6 +55,7 @@
 
 @media (max-width: 1279px) {
   .layoutContainer {
+    height: 100%;
     margin: 0 0.75rem;
   }
 
